# OpenPrompt

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yml
assets/hierarchies/: remote_sensing_taxonomy.json
assets/prompts/: prompt_templates.json
configs/datasets/: dota_template.yaml  synthetic.yaml
configs/experiments/: baseline_synthetic.yaml  dota_baseline_template.yaml  dota_geonexus_template.yaml  geonexus_math_synthetic.yaml  geonexus_synthetic.yaml
configs/models/: geonexus_rsd.yaml  openrsd_baseline.yaml
docs/method/: geonexus_rsd.md  innovation_playbook.md
docs/research_handoff/: 00_research_decision.md  01_openrsd_gap_analysis.md  02_direction_ranking.md  03_hsc_openrsd_blueprint.md  04_execution_roadmap.md  05_related_work_map.md  06_preliminary_preparations.md  07_truthfulness_and_execution_protocol.md  08_user_inputs_needed.md  09_next_session_prompt.md  10_experiment_registry_template.md  11_dataset_and_resource_manifest.md  README.md
docs/setup/: datasets.md  next_steps.md
scripts/: build_prompt_bank.py  evaluate.py  self_train.py  smoke_test.py  train.py
src/openprompt_rs/: __init__.py  config.py
src/openprompt_rs/data/: __init__.py  base.py  dota.py  factory.py  structures.py  synthetic.py
src/openprompt_rs/engine/: evaluator.py  trainer.py
src/openprompt_rs/models/: __init__.py  backbone.py  context_adapter.py  detector.py  heads.py  hierarchy.py  innovations.py  (+4 more)
tests/: test_innovations.py  test_model_forward.py  test_prompt_bank.py  test_pseudo_label.py
(+2 files in other folders)
